Added feature id and CSS to Mediterranean page. Added font scaling to Asia page.

--- a/mediterranean.html
+++ b/mediterranean.html
@@ -25,7 +25,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed tortor id felis mollis cursus at sed elit. Nunc volutpat augue augue, sed aliquet nisi dapibus sed. Sed dapibus orci id elit facilisis dignissim. Aliquam vulputate leo non egestas pulvinar.</p>
       </section>
       <div id="destinations">
-      <div class="destination clearfix">
+      <div id="feature" class="destination clearfix">
         <img src="static/images/logo.png" height="40" width="40">
         <h2>Malta</h2>
         <p>The jewel of the Mediterranean.</p>
