Tour page finished, tour.css added.

--- a/tour.html
+++ b/tour.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Home page of Academic Tours and Travel: From concept to completion." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
-    <link rel="stylesheet" type="text/css" href="static/css/layout/destination.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/layout/tour.css" />
   </head>
   <body>
     <header id="page-head" class="clearfix">
@@ -26,49 +26,64 @@
         <h1 id="title">Malta - Sicily Delight</h1>
       </div>
     </section>
+    <div id="body">
+      <section id="copy">
+        <p>This section is for descriptions of the tour.</p>
+        <p>Key highlights, sales copy, that sort of thing.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu tellus, condimentum at mauris porta, sodales placerat orci. Aenean lacinia aliquam ultricies. In ultricies bibendum nisl a rhoncus. Morbi tempus eros eu urna tincidunt dapibus. Nam tempor, nisl at sodales adipiscing, elit arcu vehicula arcu, et vulputate nunc lorem quis dolor. Ut porta auctor ultricies. Ut nec ante porttitor, aliquam est ut, placerat turpis. Sed posuere orci id dui varius, id rhoncus felis varius. Nam suscipit lorem eget ligula vulputate, sed interdum odio sagittis.</p>
+      </section>
 
-    <section id="copy">
-      <p>This section is for descriptions of the tour.</p>
-      <p>Key highlights, sales copy, that sort of thing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu tellus, condimentum at mauris porta, sodales placerat orci. Aenean lacinia aliquam ultricies. In ultricies bibendum nisl a rhoncus. Morbi tempus eros eu urna tincidunt dapibus. Nam tempor, nisl at sodales adipiscing, elit arcu vehicula arcu, et vulputate nunc lorem quis dolor. Ut porta auctor ultricies. Ut nec ante porttitor, aliquam est ut, placerat turpis. Sed posuere orci id dui varius, id rhoncus felis varius. Nam suscipit lorem eget ligula vulputate, sed interdum odio sagittis.</p>
-    </section>
+      <section id="itinerary">
+        <ol>
+          <li>
+            <h1>Day 1</h1>
+            <p>Short summary of day. Places visited, key events, meals.</p>
+            <h2>Landmark</h2>
+            <p>Landmark Copy</p>
+            <h2>Landmark</h2>
+            <p>Landmark Copy</p>
+          </li>
+          <li>
+            <h1>Day 2</h1>
+            <p>Short summary of day. Places visited, key events, meals.</p>
+            <h2>Landmark</h2>
+            <p>Landmark Copy</p>
+            <h2>Landmark</h2>
+            <p>Landmark Copy</p>
+          </li>
+        </ol>
+      </section>
 
-    <section id="itinerary">
-      <ol>
-        <li>
-          <h1>Day 1</h1>
-          <p>Short summary of day. Places visited, key events, meals.</p>
-          <h2>Landmark</h2>
-          <p>Landmark Copy</p>
-          <h2>Landmark</h2>
-          <p>Landmark Copy</p>
-        </li>
-        <li>
-          <h1>Day 2</h1>
-          <p>Short summary of day. Places visited, key events, meals.</p>
-          <h2>Landmark</h2>
-          <p>Landmark Copy</p>
-          <h2>Landmark</h2>
-          <p>Landmark Copy</p>
-        </li>
-      </ol>
-    </section>
+      <div class="clearfix">
+        <table border="1" summary="Tour Pricing">
+          <caption>Prices</caption>
+          <tr>
+            <th>July</th>
+            <td>$1500</td>
+          </tr>
+          <tr>
+            <th>August</th>
+            <td>$1000</td>
+          </tr>
+          <tr>
+            <th>September</th>
+            <td>$900</td>
+          </tr>
+        </table>
 
-    <table border="1" summary="Tour Pricing">
-      <caption>Prices</caption>
-      <tr>
-        <th>July</th>
-        <td>$1500</td>
-      </tr>
-      <tr>
-        <th>August</th>
-        <td>$1000</td>
-      </tr>
-      <tr>
-        <th>September</th>
-        <td>$900</td>
-      </tr>
-    </table>
+        <section id="contact">
+          <header><h2>Contact an Agent</h2></header>
+          <form>
+            <label>Name: <input type="text" name="name" placeholder="Jane Doe" required="true" /></label><br />
+            <label>Email: <input type="text" name="email" placeholder="example@mail.com" required="true" /></label><br />
+            <label>Phone Number:<input type="text" name="phone" placeholder="7186903055" required="true" /></label><br />
+            <label>What's your dream vacation? <textarea name="destination" placeholder="Sample text" required></textarea></label><br />
+            <button type="submit">Send</button>
+            <button type="reset">Reset</button>
+          </form>
+        </section>
+      </div>
+    </div>
     
     <footer class="clearfix">
       <div class="clearfix">
