Added client referrals to all pages.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
         </form>
       </section>
     </div>
+
+    <figure>
+      <blockquote>This is a referral from an existing customer.</blockquote>
+      <figcaption>- This is the customer's name</figcaption>
+    </figure>
     
     <footer class="clearfix">
       <div class="clearfix">
