--- a/tour.html
+++ b/tour.html
@@ -84,6 +84,11 @@
         </section>
       </div>
     </div>
+
+    <figure>
+      <blockquote>This is a referral from an existing customer.</blockquote>
+      <figcaption>- This is the customer's name</figcaption>
+    </figure>
     
     <footer class="clearfix">
       <div class="clearfix">
