--- a/regions.html
+++ b/regions.html
@@ -56,6 +56,12 @@
         </form>
       </section>
     </div>
+
+    <figure>
+      <blockquote>This is a referral from an existing customer.</blockquote>
+      <figcaption>- This is the customer's name</figcaption>
+    </figure>
+    
     <footer class="clearfix">
       <div class="clearfix">
         <p>Academic Tours and Travel, LLC (718) 690-3055<p>
